--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -54,42 +54,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/add_comment_bg"
         android:focusableInTouchMode="true"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp">
+        android:paddingVertical="5dp">
+
+        <RelativeLayout
+            android:id="@+id/comm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/et_comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/add_attach"
-            android:background="@color/transparent"
+            android:layout_toStartOf="@+id/add_comment"
+            android:layout_toEndOf="@+id/add_attach"
+            android:background="@drawable/add_comment_bg"
             android:hint="@string/add_comment"
             android:imeOptions="actionDone"
             android:importantForAutofill="no"
-            android:textSize="18sp"
-            android:inputType="text" />
-
-        <TextView
-            android:id="@+id/files_chosen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/et_comment"
-            android:text="@string/no_file_choose"
-            android:visibility="gone"
-            android:textColor="@color/text_request_gray"
-            android:textSize="14sp" />
+            android:inputType="text"
+            android:padding="10dp"
+            android:textSize="18sp" />
 
         <ImageView
             android:id="@+id/add_attach"
-            android:layout_width="wrap_content"
+            android:layout_width="35dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toStartOf="@id/add_comment"
+            android:adjustViewBounds="true"
             android:contentDescription="@string/description"
+            android:padding="5dp"
             android:src="@drawable/ic_attach_file"
-            app:tint="@color/gray" />
+            app:tint="@color/colorAccent" />
 
         <ImageView
             android:id="@+id/add_comment"
@@ -99,9 +95,25 @@
             android:layout_centerVertical="true"
             android:adjustViewBounds="true"
             android:contentDescription="@string/description"
-            android:src="@drawable/ic_send" />
+            android:padding="5dp"
+            android:src="@drawable/ic_send"
+            app:tint="@color/colorAccent" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/files_chosen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/comm"
+            android:text="@string/no_file_choose"
+            android:layout_marginStart="45dp"
+            android:visibility="gone"
+            android:textColor="@color/text_request_gray"
+            android:textSize="14sp"/>
 
     </RelativeLayout>
+
 
 
     <ProgressBar
