--- a/app/src/main/res/layout/fragment_all_requests.xml
+++ b/app/src/main/res/layout/fragment_all_requests.xml
@@ -16,19 +16,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/description"
-                android:src="@drawable/ic_back"
-                app:tint="@color/black" />
 
             <TextView
                 android:id="@+id/project_name"
@@ -40,13 +28,10 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:paddingVertical="5dp"
-                android:paddingHorizontal="15dp"
+                android:padding="8dp"
                 android:background="@drawable/et_gray"
                 app:drawableEndCompat="@drawable/ic_arrow_down" />
 
-
-        </LinearLayout>
 
 
         <RelativeLayout
@@ -129,6 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp">
 
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
@@ -139,4 +125,9 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 </RelativeLayout>
